# hermes-voxvey

./: LICENSE.md  README.md  pyproject.toml
plugins/: __init__.py
plugins/image_gen/voxvey/: __init__.py  plugin.yaml
plugins/model-providers/voxvey/: __init__.py  plugin.yaml
plugins/video_gen/voxvey/: __init__.py  plugin.yaml
plugins/voxvey_auth/: __init__.py  cli.py  plugin.yaml
plugins/voxvey_common/: __init__.py  client.py  oauth.py
plugins/web/voxvey/: __init__.py  plugin.yaml
tests/: conftest.py  test_common_client.py  test_no_pricing_references.py  test_oauth_and_cli.py  test_packaging.py  test_provider_and_backends.py
voxvey/: __init__.py  auth_cli.py  auth_plugin.py  image_gen.py  model_provider.py  oauth.py  realtime.py  search.py  video_gen.py
